# GAMES101-Windows

./: .gitmodules  README.md
Assignment/: .clang-tidy  CMakeLists.txt  format_code.sh
Assignment/HW0/code/: CMakeLists.txt  main.cpp
Assignment/HW1/code/: .clang-format  CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment/HW2/code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment/HW3/Code/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment/HW4/code/: main.cpp
